<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context="com.example.alejndro.xml_parse.individual_alumnos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave"
            android:text="@string/clave"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clave2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/clave2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:text="@string/nombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/nombre2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidop"
            android:text="@string/apellidop"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidop2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/apellidop2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apelldom"
            android:text="@string/apellidom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidom2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/apellidom2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carrera"
            android:text="@string/carrera"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carrera2"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:text="@string/carrera2"/>
    </LinearLayout>


</LinearLayout>
